RESOLVED FIXED 244400
[IFC][Floats] Fix LayoutTests/fast/block/float/017.html
https://bugs.webkit.org/show_bug.cgi?id=244400
Summary [IFC][Floats] Fix LayoutTests/fast/block/float/017.html
zalan
Reported 2022-08-26 11:53:19 PDT
ssia
Attachments
Patch (1.67 KB, patch)
2022-08-26 11:56 PDT, zalan
no flags
zalan
Comment 1 2022-08-26 11:56:51 PDT
EWS
Comment 2 2022-08-26 16:05:42 PDT
Committed 253845@main (8b10da05283d): <https://commits.webkit.org/253845@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461891 [details].
Radar WebKit Bug Importer
Comment 3 2022-08-26 16:06:20 PDT
Note You need to log in before you can comment on or make changes to this bug.