[IFC][Floats] Fix LayoutTests/fast/block/float/017.html https://bugs.webkit.org/show_bug.cgi?id=244400

Reviewed by Antti Koivisto.

Static position is the border box position (shifted by start/before margin values). (017.html has floated images with non-zero vspace values -> margin-before.)

* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::handleFloatContent):

Canonical link: https://commits.webkit.org/253845@main